controllers/mongo-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  labels:
    app: mongo
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo-service"
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:5.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ] 
      storageClassName: "local-mongo"
      resources:
        requests:
          storage: 1Gi
