controllers/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: skill-importance-frontend
  type: NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
